# trollauncher

./: .clang-format  .gitignore  .gitmodules  LICENSE.md  Makefile  README.md  bootstrap.sh  format_code.sh  meson.build
.github/workflows/: build.yml  linux-build.yml
ci/containers/: README.md  Ubuntu1804Dockerfile  Ubuntu2004Dockerfile  Windows2019Dockerfile  make_containers.sh
package/linux/: debian_control.in  make_package.sh
package/ubuntu/: debian_control.in  make_package.sh  trollauncher.desktop  ubuntu1804_pkgdeps.txt  ubuntu2004_pkgdeps.txt
resource/: trollauncher.rc.in
trollauncher/: cli.cpp  cli.hpp  error_codes.cpp  error_codes.hpp  forge_installer.cpp  forge_installer.hpp  gui.cpp  gui.hpp  java_detector.cpp  java_detector.hpp  keeplist_processor.cpp  keeplist_processor.hpp  launcher_profiles_editor.cpp  launcher_profiles_editor.hpp  main.cpp  mc_process_detector.cpp  mc_process_detector.hpp  modpack_installer.cpp  modpack_installer.hpp  profile_data.hpp  trollauncher.rc  utils.cpp  utils.hpp
